# charname

./: Cargo.toml  README.md  UnicodeDataFixed.txt  build.rs  parser.py
benches/: bench_get_name.rs
src/: lib.rs
