[package]
name = "charname"
version = "1.15.1"
edition = "2021"
authors = ["Hasan Ibraheem <hasantiny@gmail.com>"]
license = "MPL-2.0"
description = "Incredibly simple library that just gives you the Unicode name for a character."
repository = "https://github.com/JuanPotato/charname"

[dependencies]
phf = "0.11.2"

[build-dependencies]
phf_codegen = "0.11.2"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench_get_name"
harness = false
