[package]
name = "charname"
version = "1.16.0"
edition = "2024"
authors = ["Hasan Ibraheem <hasan@juanpota.to>"]
license = "MPL-2.0"
description = "Incredibly simple library that just gives you the Unicode name for a character."
repository = "https://github.com/JuanPotato/charname"

[dependencies]
phf = "0.11.3"

[build-dependencies]
phf_codegen = "0.11.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_get_name"
harness = false
